--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,8 @@ body {
 }
 
 .container {
+    max-width: 700px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,7 +50,7 @@ h1 {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 2em 0 3em 0;
+    margin: 0 0 3em;
 }
 
 .deck .card {
@@ -86,9 +88,16 @@ h1 {
  */
 
 .score-panel {
-    text-align: left;
-    width: 345px;
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    padding: 1em 2em;
+}
+
+.score-panel p {
+    margin: 0;
 }
 
 .score-panel .stars {
@@ -104,7 +113,7 @@ h1 {
 }
 
 .score-panel .restart {
-    float: right;
+    align-self: flex-end;
     cursor: pointer;
 }
 
