--- a/css/app.css
+++ b/css/app.css
@@ -22,8 +22,6 @@ body {
 }
 
 .container {
-    max-width: 700px;
-    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,22 +38,21 @@ h1 {
  */
 
 .deck {
-    width: 300px;
-    min-height: 320px;
+    width: 100vw;
+    height: 100vw;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 8px;
+    padding: 1em;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 0 3em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-gap: 0.5em;
 }
 
 .deck .card {
-    height: 60px;
-    width: 60px;
+    height: 100%;
+    width: 100%;
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
@@ -204,15 +201,6 @@ h1 {
     .score-panel {
         font-size: 1.5em;
     }
-    .deck {
-        width: 400px;
-        min-height: 420px;
-        padding: 1em;
-    }
-    .deck .card {
-        height: 85px;
-        width: 85px;    
-    }
     .deck .card.show {
         font-size: 1.5em;
     }
@@ -220,13 +208,7 @@ h1 {
 
 @media screen and (min-width: 500px) {
     .deck {
-        width: 500px;
-        min-height: 500px;
-        padding: 1.5em;
-    }
-    .deck .card {
-        height: 100px;
-        width: 100px;    
+        grid-gap: 0.7em;
     }
     .deck .card.show {
         font-size: 1.8em;
@@ -234,14 +216,13 @@ h1 {
 }
 
 @media screen and (min-width: 700px) {
-    .deck {
-        width: 660px;
-        min-height: 680px;
-        padding: 2em;
+    .container {
+        max-width: 700px;
+        margin: 0 auto;
     }
-    .deck .card {
-        height: 125px;
-        width: 125px;    
+    .deck {
+        width: 600px;
+        height: 600px;
     }
     .deck .card.show {
         font-size: 2em;
