--- a/css/app.css
+++ b/css/app.css
@@ -30,7 +30,8 @@ body {
 
 h1 {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+    font-weight: 500;
+    font-size: 2em;
 }
 
 /*
@@ -91,8 +92,8 @@ h1 {
     justify-content: center;
     align-items: flex-start;
     width: 100%;
-    padding: 0.5em 2em;
-    font-size: 1.2em;
+    padding: 0.5em;
+    font-size: 1.5em;
 }
 
 .score-panel p {
